For the latest news, visit the SparForte web site.

Objective: Bug fixes following 2.4 and continue command line improvements.

CHANGES SINCE 2.4

1. New: doubly_linked_lists.parcel.

2. Fix: fixed "positive value is less than zero" error for a zero.

3. New: renaming a generic type.

4. Fix: missing filename at end-of-line for >, 2>, < no longer produce an
exception.

5. Change: forgetting a "when" in a case statement with strings, which looks
like a shell command, is now an error, detected by the presence of the big arrow
(=>).

6. Fix: out mode formal parameters that are not written to will have a
"declared but not written to" error.

7. Fix: . and .. directories ignored on file completions ending with a /.

8. New: strings.to_hexadecimal_digits

9. Fix: added policy and configuration to built-in help.

10. Fix: strings package csv_field, csv_replace, field, is_slashed_date, is_typo_of, mktemp, split, to_base64, to_escaped, to_hexadecimal_digits, to_json are now not allowed with pragma ada_95.  I don't remember if there was a reason there were allowed previously. [tests needed]
